@@ -106,6 +106,7 @@
   Jakub Bogusz			qboosh@pld-linux.org
   Jacob Meuser			jakemsr@jakemsr.com
   James Su			james.su@gmail.com
+  Jay K				jay.krell@cornell.edu
   Jeff Squyres			jsquyres@lam-mpi.org
   Jeremy C. Reed		reed@reedmedia.net
   Jim Meyering			jim@meyering.net
