@@ -1,6 +1,6 @@
 # execute-mode.at -- libtool --mode=execute             -*- Autotest -*-
 #
-#   Copyright (C) 2008, 2009 Free Software Foundation, Inc.
+#   Copyright (C) 2008, 2009, 2010 Free Software Foundation, Inc.
 #   Written by Ralf Wildenhues, 2008
 #
 #   This file is part of GNU Libtool.
@@ -193,19 +193,19 @@ do
   fi
   AT_CHECK([$LIBTOOL --mode=execute ./foo abc "$arg1" "$arg2" xyz], [], [stdout], [ignore])
   AT_CHECK([$FGREP "$arg1" stdout], [], [ignore])
-  AT_CHECK([$FGREP "$arg2" stdout], [], [ignore])
+  AT_CHECK([test -z "$arg2" || $FGREP "$arg2" stdout], [], [ignore])
   AT_CHECK([test `sed -n '/^abc$/,/^xyz$/p' stdout | wc -l` -eq 4])
   AT_CHECK([$LIBTOOL --mode=execute ./lt-wrapper abc "$arg1" "$arg2" xyz </dev/null], [], [stdout])
   AT_CHECK([$FGREP "$arg1" stdout], [], [ignore])
-  AT_CHECK([$FGREP "$arg2" stdout], [], [ignore])
+  AT_CHECK([test -z "$arg2" || $FGREP "$arg2" stdout], [], [ignore])
   AT_CHECK([test `sed -n '/^abc$/,/^xyz$/p' stdout | wc -l` -eq 4])
   AT_CHECK([$LIBTOOL --mode=execute ./foo lt-wrapper abc "$arg1" "$arg2" xyz], [], [stdout])
   AT_CHECK([$FGREP "$arg1" stdout], [], [ignore])
-  AT_CHECK([$FGREP "$arg2" stdout], [], [ignore])
+  AT_CHECK([test -z "$arg2" || $FGREP "$arg2" stdout], [], [ignore])
   AT_CHECK([test `sed -n '/^abc$/,/^xyz$/p' stdout | wc -l` -eq 4])
   AT_CHECK([$LIBTOOL --mode=execute ./main$EXEEXT abc "$arg1" "$arg2" xyz], [], [stdout])
   AT_CHECK([$FGREP "$arg1" stdout], [], [ignore])
-  AT_CHECK([$FGREP "$arg2" stdout], [], [ignore])
+  AT_CHECK([test -z "$arg2" || $FGREP "$arg2" stdout], [], [ignore])
   # Do not match EOL here, cross setups may have an extra \r here.
   AT_CHECK([test `sed -n '/^abc/,/^xyz/p' stdout | wc -l` -eq 4])
   arg1=
